cmake_minimum_required(VERSION 3.31)
project(Full_Training_CP)

set(CMAKE_CXX_STANDARD 20)

add_executable(Full_Training_CP 1-Revision_OOP_Compare_Function.cpp
        2-Revision_STLs.cpp
        3-Frequecy_Array.cpp
        4-Prefix_Sum_and_Partial_Sum.cpp
        5-Binary_Search.cpp
        6-Interactive_Problems.cpp
)
